# pyproject-template

./: README.md  README.md.tmpl  mkdocs.yml  mkdocs.yml.tmpl  pyproject.toml  pyproject.toml.tmpl
.devcontainer/: devcontainer.json  postCreate.sh  post_create.sh
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/: dependabot.yml  envsubst.sh  post-create.sh  postCreate.sh
.github/scripts/: envsubst.sh
.github/workflows/: codeql-analysis.yml  post-create.yaml  post-create.yml
.trunk/: trunk.yaml
