[project]
name = ""
version = "0.1.0"
description = ""
authors = [
  { name = "", email = "" },
]
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "mkdocs",
  "pytest",
  "towncrier",  
  "tox",
]

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
clean = { shell = "pdm run clean-build && pdm run clean-pyc && pdm run clean-test", help = "remove all build, test, coverage and Python artifacts" }
clean-build = { shell = "bash .scripts/clean-build.sh", help = "remove build artifacts" }
clean-pyc = { shell = "bash .scripts/clean-pyc.sh", help = "remove Python file artifacts" }
clean-test = { shell = "bash .scripts/clean-test.sh", help = "remove test and coverage artifacts" }
docs-build = { shell = "mkdocs build", help = "Build the MkDocs documentation" }
docs-serve = { shell = "mkdocs serve", help = "Run the builtin development server" }
docs-deploy = { shell = "mkdocs gh-deploy", help = "Deploy your documentation to GitHub Pages" }
test = { shell = "pdm run pytest", help = "run tests with the default Python" }
test-all = { shell = "pdm run tox", help = "run tests on every Python version" }
post_lock = { shell = "pdm export -f requirements -o requirements.txt", help = "Export the locked packages set to requirements.txt" }
